<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">secondgoods</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="login">登录</string>
 	<string name="findback">无法登陆？</string>
    <string name="username">姓名</string>
    <string name="userphone">手机号</string>
    <string name="userpwd">密码</string>
    <string name="userpwd_again">再次输入密码</string>
    <string name="userqq">QQ</string>
    <string name="userage">年龄</string>
    <string name="usergender">性别</string>
    <string name="usercollage">学院</string>
    <string name="usermajor">专业</string>
    <string name="usergrade">班级</string>
    <string name="usernum">学号</string>
    <string name="app_close">退出PesHelper</string>
    <string name="btn_ok">确 定</string>
    <string name="btn_cancel">取 消</string>
</resources>
